# plant-imager-build-and-test

./: .gitmodules  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: CI.yml
applications/: CMakeLists.txt  README.md
applications/example/: CMakeLists.txt
applications/example/src/: main.cpp
applications/example/test/: CMakeLists.txt
applications/plant-imager-camera/: CMakeLists.txt
libplantimager/: CMakeLists.txt  README.md
libplantimager/include/: IPlantImagerDemo.h  PlantImagerDemo.h
libplantimager/src/: PlantImagerDemo.cpp
libplantimager/test/: CMakeLists.txt
libplantimager/test/mocks/: CMakeLists.txt  PlantImagerDemoMock.h
libplantimager/test/src/: PlantImagerDemo_tests.cpp
